# OpenCV

./: README.md
asyno/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  codecs.cpp  codecs.hpp  cvboh  cvboh.cpp  cvcap  cvcap.cpp  cvdisplay.cpp  cvproc  cvproc.cpp  ffcodecs.cpp  ffcodecs.hpp
asynohs/: README.md  asynohs.cabal  stack.yaml
asynohs/src/: Main.hs
